popup close icon bugfix on ios less than 15.4

--- a/css/footer.css
+++ b/css/footer.css
@@ -98,9 +98,6 @@ footer {
   top: 0;
   background-color: var(--greyBgColor);
   z-index: 2;
-  display: flex;
-  flex-direction: column;
-  align-items: end;
   overflow-y: auto;
 }
 
@@ -115,6 +112,8 @@ footer {
 }
 
 #privacy_popup_close {
+  position: absolute;
+  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -123,6 +122,7 @@ footer {
 
 .privacy_popup_content {
   padding: 0 60px;
+  margin-top: 60px;
   color: var(--popupTextColor);
 }
 
